Refactor bus models (#261)
* Split Bus model in three models based on use case :
 - connection point for equipment connection (use static id for macro connect with default bus)
 - action point for automaton (replace default bus model)
 - bus of equipment for omegaref (use equipment id instead of bus id for macro connect)
* Replace OmegaRef with SetPoint when a StandardBus is found

Signed-off-by: lisrte <laurent.issertial@rte-france.com>